fixed collapse and expand buttons on category selector

--- a/src/components/ui/Navbar/Navbar.css
+++ b/src/components/ui/Navbar/Navbar.css
@@ -165,9 +165,9 @@ nav.desktop .right-side .notifications-menu-toggle .unread-notification-count {
 }
 
 nav.desktop .right-side .right-side-menu-button {
-  height: 35px;
-  width: 35px;
-  min-width: 35px;
+  height: 40px;
+  width: 40px;
+  min-width: 40px;
   border-radius: 100px;
   display: flex;
   align-items: center;
